--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="knowledge__container container">
                 <div class="knowledege__texts">
                     <h2 class="subtitle">¡Nuestro Proyecto!</h2>
-                    <p class="knowledge__paragraph">Contamos con nuestro primer mouse con un puerto USB extra, el cual podras conectar desde una simple usb a un disco duro portable, tu imaginación es tu limite.</p>
+                    <p class="knowledge__paragraph">Contamos con nuestro primer mouse con un puerto USB extra, el cual podras conectar desde una simple usb a un disco duro portable, tu imaginación es tu límite.</p>
                 </div>
 
                 <figure class="knowledge__picture">
